tests/reference/tokens-indent1-0b243c5.stderr
tokenizer error: Indentation should be of the same type (either tabs or spaces)
 --> tests/tokens/errors/indent1.py:3:1
  |
3 |   pass
  | ^^ 
